bk_ida/mcfida/c2/suspend_impl
implicit.c:821:10: error: conflicting types for 'suspend_impl'
__int64  suspend_impl( network_t *net, cost_t threshold, __int64 all) 
         ^
./implicit.h:31:13: note: previous declaration is here
extern long suspend_impl _PROTO_(( network_t *, cost_t, long ));
            ^
implicit.c:866:17: error: expected expression
v7 = *( _OWORD *)&v5->cost; 
                ^
implicit.c:866:9: error: use of undeclared identifier '_OWORD'
v7 = *( _OWORD *)&v5->cost; 
        ^
implicit.c:867:17: error: expected expression
v8 = *( _OWORD *)&v5->head; 
                ^
implicit.c:867:9: error: use of undeclared identifier '_OWORD'
v8 = *( _OWORD *)&v5->head; 
        ^
implicit.c:868:17: error: expected expression
v9 = *( _OWORD *)&v5->nextout; 
                ^
implicit.c:868:9: error: use of undeclared identifier '_OWORD'
v9 = *( _OWORD *)&v5->nextout; 
        ^
implicit.c:869:12: error: expected expression
*( _OWORD *)&v6->flow = *( _OWORD *)&v5->flow; 
           ^
implicit.c:869:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->flow = *( _OWORD *)&v5->flow; 
   ^
implicit.c:869:36: error: expected expression
*( _OWORD *)&v6->flow = *( _OWORD *)&v5->flow; 
                                   ^
implicit.c:869:28: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->flow = *( _OWORD *)&v5->flow; 
                           ^
implicit.c:870:12: error: expected expression
*( _OWORD *)&v6->nextout = v9; 
           ^
implicit.c:870:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->nextout = v9; 
   ^
implicit.c:871:12: error: expected expression
*( _OWORD *)&v6->head = v8; 
           ^
implicit.c:871:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->head = v8; 
   ^
implicit.c:872:12: error: expected expression
*( _OWORD *)&v6->cost = v7; 
           ^
implicit.c:872:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->cost = v7; 
   ^
17 errors generated.
